queue spacing fix

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -18,7 +18,6 @@ body {
     grid-template-columns: 50% 50%;
     padding: 10px;
     background-color: white;
-    min-height: 90%;
 
 }
 
@@ -62,7 +61,6 @@ main{
     font-family: "Novecento", "Arial", "Helvetica", "sans-serif";
     font-size: 2rem;
     text-transform: uppercase;
-    flex-wrap: wrap;
 }
 
 .link{
